<resources>
    <string name="app_name">SwooshApp</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired league:</string>
    <string name="mens">MENS</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="welcome_background">welcome background</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominat_the_league">Find a team in your city, and dominat the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">FINISH</string>
</resources>
