<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.SkillActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/beginnerballerbg"
        android:contentDescription="@string/background_image" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="84dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/swooshlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/i_am_a"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="116dp"
        android:layout_marginTop="52dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ToggleButton
            android:id="@+id/skillBeginnerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onBeginnerClicked"
            android:text="@string/beginner"
            android:textColor="@color/colorAccent"
            android:textOff="@string/beginner"
            android:textOn="@string/beginner" />

        <ToggleButton
            android:id="@+id/skillBallerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@drawable/swoosh_toggle"
            android:fontFamily="@font/montserrat"
            android:onClick="onBallerClicked"
            android:text="@string/baller"
            android:textColor="@color/colorAccent"
            android:textOff="@string/baller"
            android:textOn="@string/baller" />
    </LinearLayout>

    <Button
        android:id="@+id/skillFinishBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/swoosh_button"
        android:onClick="onFinishClicked"
        android:text="@string/finish"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>